--- a/.github/workflows/manualdist.yml
+++ b/.github/workflows/manualdist.yml
@@ -13,7 +13,7 @@ jobs:
         os:
           - windows-latest
           - macos-latest
-          - ubuntu-latest
+          - ubuntu-20.04
     runs-on: ${{ matrix.os }}
     steps:
       - uses: actions/checkout@v2
