--- a/.github/workflows/yak-plugin-test.yml
+++ b/.github/workflows/yak-plugin-test.yml
@@ -2,7 +2,7 @@ name: Yak Plugin Testcases
 
 on:
   pull_request:
-    branches: [ master ]
+    branches: [ main ]
     paths:
       - 'common/**'
 jobs:
