--- a/.github/workflows/new-yak-engine-test.yml
+++ b/.github/workflows/new-yak-engine-test.yml
@@ -2,7 +2,7 @@ name: new-yak-engine-test
 
 on:
   pull_request:
-    branches: [ master ]
+    branches: [ main ]
     paths:
       - 'common/yak/antlr4yak/**'
 
