--- a/.github/workflows/essential-tests.yml
+++ b/.github/workflows/essential-tests.yml
@@ -31,26 +31,23 @@ jobs:
           sudo apt-get install libpcap-dev=1.9.1-3
 
       - name: Test Start
-        run: go test -timeout 1m common/jsonextractor -v
+        run: go test -timeout 1m ./common/jsonextractor -v
 
       - name: Run tests lowhttp with retry
         uses: nick-fields/retry@v2
         with:
           max_attempts: 3
           timeout_minutes: 1
-          command: go test -timeout 1m common/utils/lowhttp -v
-
-#      - name: Test LowHTTP
-#        run: go test -timeout 1m common/utils/lowhttp -v
+          command: go test -timeout 1m ./common/utils/lowhttp -v
 
       - name: Test Codec
-        run: go test -timeout 1m common/yak/yaklib/codec -v
+        run: go test -timeout 1m ./common/yak/yaklib/codec -v
 
       - name: Test CartesianProduct
-        run: go test -timeout 1m common/yak/cartesian -v
+        run: go test -timeout 1m ./common/yak/cartesian -v
 
       - name: TestDomainExtract
-        run: go test -timeout 1m common/domainextractor -v
+        run: go test -timeout 1m ./common/domainextractor -v
 
       - name: Test HttpTpl(YakTemplate)
-        run: go test -timeout 1m common/yak/httptpl -v
+        run: go test -timeout 1m ./common/yak/httptpl -v
