--- a/.github/workflows/ci-testground.yml
+++ b/.github/workflows/ci-testground.yml
@@ -9,7 +9,7 @@ on:
 
 jobs:
   build_and_release:
-    if: ${{ startsWith(github.ref, 'refs/tags/v') || startsWith(github.ref, 'refs/heads/ci/') }}
+    if: ${{ startsWith(github.ref, 'refs/tags/v') || startsWith(github.ref, 'refs/heads/ci/')  || startsWith(github.ref, 'refs/heads/citest/') }}
     strategy:
       matrix:
         os:
@@ -53,4 +53,5 @@ jobs:
         run: go run common/yak/yakdoc/generate_doc/generate_doc.go common/yak/yakdoc/doc/doc.gob.gzip
 
       - name: Initialize License Machine
-        run: wget
+        run: go run common/xlic/cmd/initializer.go --ak {{ secrets.OSS_KEY_ID }} --sk {{ secrets.OSS_KEY_SECRET }}
+      
