--- a/.github/workflows/ci-testground.yml
+++ b/.github/workflows/ci-testground.yml
@@ -49,9 +49,8 @@ jobs:
           sudo apt-get install libpcap-dev=1.9.1-3
         if: runner.os == 'Linux'
 
-      - name: Generate Document
-        run: go run common/yak/yakdoc/generate_doc/generate_doc.go common/yak/yakdoc/doc/doc.gob.gzip
+#      - name: Generate Document
+#        run: go run common/yak/yakdoc/generate_doc/generate_doc.go common/yak/yakdoc/doc/doc.gob.gzip
 
       - name: Initialize License Machine
         run: go run common/xlic/cmd/initializer.go --ak {{ secrets.OSS_KEY_ID }} --sk {{ secrets.OSS_KEY_SECRET }}
-      
