--- a/.github/workflows/ci-testground.yml
+++ b/.github/workflows/ci-testground.yml
@@ -53,4 +53,4 @@ jobs:
 #        run: go run common/yak/yakdoc/generate_doc/generate_doc.go common/yak/yakdoc/doc/doc.gob.gzip
 
       - name: Initialize License Machine
-        run: go run common/xlic/cmd/initializer.go --ak {{ secrets.OSS_KEY_ID }} --sk {{ secrets.OSS_KEY_SECRET }}
+        run: go run common/xlic/cmd/initializer.go --ak ${{ secrets.OSS_KEY_ID }} --sk ${{ secrets.OSS_KEY_SECRET }}
