--- a/.github/workflows/manualdist.yml
+++ b/.github/workflows/manualdist.yml
@@ -47,6 +47,12 @@ jobs:
           sudo apt-get install libpcap-dev
         if: runner.os == 'Linux'
 
+      - name: Generate Document
+        run: go run common/yak/yakdoc/generate_doc/generate_doc.go common/yak/yakdoc/doc/doc.gob.gzip
+
+      - name: Initialize License Machine
+        run: go run common/xlic/cmd/initializer.go --ak ${{ secrets.OSS_KEY_ID }} --sk ${{ secrets.OSS_KEY_SECRET }}
+
       - name: Build For Linux
         run: |
           go build -ldflags "-linkmode external -extldflags '-static' -s -w -X 'main.goVersion=$(go version)' -X 'main.gitHash=$(git show -s --format=%H)' -X 'main.buildTime=$(git show -s --format=%cd)' -X 'main.yakVersion=${{ steps.fetchtag.outputs.value }}'" -o "./yak_$(go env GOOS)_$(go env GOARCH)" -v common/yak/cmd/yak.go
@@ -62,20 +68,12 @@ jobs:
           go build -ldflags "-s -w -X 'main.goVersion=$(go version)' -X 'main.gitHash=$(git show -s --format=%H)' -X 'main.buildTime=$(git show -s --format=%cd)' -X 'main.yakVersion=${{ steps.fetchtag.outputs.value }}'" -o ./yak_windows_amd64.exe -v common/yak/cmd/yak.go
         if: runner.os == 'Windows'
 
-      - name: Upload Artifacts Windows(x86)
+      - name: Upload Artifacts Windows
         uses: actions/upload-artifact@v2
         if: runner.os == 'Windows'
         with:
           name: yak_windows_amd64.exe
           path: ./yak_windows_amd64.exe
-
-      - name: Upload Artifacts Windows
-        uses: actions/upload-artifact@v2
-        if: runner.os == 'Windows'
-        with:
-          name: yak_windows_i386.exe
-          path: ./yak_windows_amd64.exe
-
 
       - name: Upload Artifacts MacOS
         uses: actions/upload-artifact@v2
