--- a/.github/workflows/yak-plugin-test.yml
+++ b/.github/workflows/yak-plugin-test.yml
@@ -30,5 +30,5 @@ jobs:
         uses: nick-fields/retry@v2
         with:
           max_attempts: 5
-          timeout_minutes: 1
+          timeout_minutes: 5m
           command: go test -timeout 5m ./common/vulinbox -v
