--- a/.github/workflows/ci-testground.yml
+++ b/.github/workflows/ci-testground.yml
@@ -10,13 +10,6 @@ on:
 jobs:
   build_and_release:
     if: ${{ startsWith(github.ref, 'refs/tags/v') || startsWith(github.ref, 'refs/heads/ci/')  || startsWith(github.ref, 'refs/heads/citest/') }}
-    strategy:
-      matrix:
-        os:
-          - windows-latest
-          - macos-latest
-          - ubuntu-20.04
-    runs-on: ${{ matrix.os }}
     steps:
       - uses: actions/checkout@v2
       - name: Set Yak Version by Tag
@@ -38,19 +31,15 @@ jobs:
       #          Invoke-WebRequest https://nmap.org/npcap/dist/npcap-sdk-1.07.zip -OutFile C:\NpcapSDK.zip
       #          Expand-Archive C:\NpcapSDK.zip -DestinationPath ..\wpdpack
       #        if: runner.os == 'Windows'
-      - name: Install libpcap (macOS)
+      - name: echo citest.txt
         run: |
-          brew install libpcap
-        if: runner.os == 'macOS'
-
-      - name: Install libpcap (Linux)
-        run: |
-          sudo apt-get update
-          sudo apt-get install libpcap-dev=1.9.1-3
-        if: runner.os == 'Linux'
-
-#      - name: Generate Document
-#        run: go run common/yak/yakdoc/generate_doc/generate_doc.go common/yak/yakdoc/doc/doc.gob.gzip
-
-      - name: Initialize License Machine
-        run: go run common/xlic/cmd/initializer.go --ak ${{ secrets.OSS_KEY_ID }} --sk ${{ secrets.OSS_KEY_SECRET }}
+          echo "citest.txt" > citest.txt
+      - name: Upload yak to oss Latest
+        uses: tvrcgo/upload-to-oss@master
+        with:
+          key-id: ${{ secrets.OSS_KEY_ID }}
+          key-secret: ${{ secrets.OSS_KEY_SECRET }}
+          region: oss-accelerate
+          bucket: yaklang
+          assets: |
+            ./citest.txt:/citest.txt
