--- a/docs/structs/github.com/yaklang/yaklang/common/fp/webfingerprint.CPE.struct.yakdoc.yaml
+++ b/docs/structs/github.com/yaklang/yaklang/common/fp/webfingerprint.CPE.struct.yakdoc.yaml
@@ -1,5 +1,5 @@
 is_build_in_struct: false
-libname: cve
+libname: servicescan
 struct_name: github.com/yaklang/yaklang/common/fp/webfingerprint.CPE
 description: ""
 fields:
