--- a/docs/structs/github.com/yaklang/yaklang/common/utils/pingutil.PingResult.struct.yakdoc.yaml
+++ b/docs/structs/github.com/yaklang/yaklang/common/utils/pingutil.PingResult.struct.yakdoc.yaml
@@ -1,5 +1,5 @@
 is_build_in_struct: false
-libname: servicescan
+libname: synscan
 struct_name: github.com/yaklang/yaklang/common/utils/pingutil.PingResult
 description: ""
 fields:
