--- a/docs/structs/github.com/yaklang/yaklang/common/yakgrpc/yakit.Host.struct.yakdoc.yaml
+++ b/docs/structs/github.com/yaklang/yaklang/common/yakgrpc/yakit.Host.struct.yakdoc.yaml
@@ -1,5 +1,5 @@
 is_build_in_struct: false
-libname: db
+libname: yakit
 struct_name: github.com/yaklang/yaklang/common/yakgrpc/yakit.Host
 description: ""
 fields:
