--- a/docs/yso.yakdoc.yaml
+++ b/docs/yso.yakdoc.yaml
@@ -4,7 +4,7 @@ functions:
   type_str: 'func (v1: []uint8, v2 ...func GenClassOptionFun(v1: *yso.ClassConfig)
     ) return(*javaclassparser.ClassObject, error) '
   long_description: ""
-  description: ""
+  description: "从Bytes中加载Class"
   params:
   - name: v1
     param_alias: ""
@@ -40,7 +40,7 @@ functions:
   type_str: 'func (v1: string, v2 ...func GenClassOptionFun(v1: *yso.ClassConfig)
     ) return(*javaclassparser.ClassObject, error) '
   long_description: ""
-  description: ""
+  description: "生成一个制定域名的DNSLog恶意类"
   params:
   - name: v1
     param_alias: ""
@@ -76,7 +76,7 @@ functions:
   type_str: 'func (v1 ...func GenClassOptionFun(v1: *yso.ClassConfig) ) return(*javaclassparser.ClassObject,
     error) '
   long_description: ""
-  description: ""
+  description: "生成一个修改Tomcat最大头长度的恶意类"
   params:
   - name: v1
     param_alias: ""
@@ -107,7 +107,7 @@ functions:
   type_str: 'func (v1 ...func GenClassOptionFun(v1: *yso.ClassConfig) ) return(*javaclassparser.ClassObject,
     error) '
   long_description: ""
-  description: ""
+  description: "生成一个兼容性Echo回显恶意对象"
   params:
   - name: v1
     param_alias: ""
@@ -138,7 +138,7 @@ functions:
   type_str: 'func (v1: string, v2 ...func GenClassOptionFun(v1: *yso.ClassConfig)
     ) return(*javaclassparser.ClassObject, error) '
   long_description: ""
-  description: ""
+  description: "生成一个ProcessBuilderExec方式的恶意类对象"
   params:
   - name: v1
     param_alias: ""
@@ -174,7 +174,7 @@ functions:
   type_str: 'func (v1: string, v2 ...func GenClassOptionFun(v1: *yso.ClassConfig)
     ) return(*javaclassparser.ClassObject, error) '
   long_description: ""
-  description: ""
+  description: "生成一个ProcessImpl执行的恶意类对象"
   params:
   - name: v1
     param_alias: ""
@@ -210,7 +210,7 @@ functions:
   type_str: 'func (v1: string, v2 ...func GenClassOptionFun(v1: *yso.ClassConfig)
     ) return(*javaclassparser.ClassObject, error) '
   long_description: ""
-  description: ""
+  description: "生成一个RuntimeExec的恶意类"
   params:
   - name: v1
     param_alias: ""
@@ -246,7 +246,7 @@ functions:
   type_str: 'func (v1 ...func GenClassOptionFun(v1: *yso.ClassConfig) ) return(*javaclassparser.ClassObject,
     error) '
   long_description: ""
-  description: ""
+  description: 生成一个SpringEcho恶意类对象""
   params:
   - name: v1
     param_alias: ""
@@ -277,7 +277,7 @@ functions:
   type_str: 'func (v1: string, v2: int, v3 ...func GenClassOptionFun(v1: *yso.ClassConfig)
     ) return(*javaclassparser.ClassObject, error) '
   long_description: ""
-  description: ""
+  description: "生成一个TCP反连的恶意类对象"
   params:
   - name: v1
     param_alias: ""
@@ -318,7 +318,7 @@ functions:
   type_str: 'func (v1: string, v2: int, v3 ...func GenClassOptionFun(v1: *yso.ClassConfig)
     ) return(*javaclassparser.ClassObject, error) '
   long_description: ""
-  description: ""
+  description: "生成一个TCP反弹Shell的恶意类对象"
   params:
   - name: v1
     param_alias: ""
@@ -359,7 +359,7 @@ functions:
   type_str: 'func (v1 ...func GenClassOptionFun(v1: *yso.ClassConfig) ) return(*javaclassparser.ClassObject,
     error) '
   long_description: ""
-  description: ""
+  description: "生成一个Tomcat回显恶意类"
   params:
   - name: v1
     param_alias: ""
@@ -389,7 +389,7 @@ functions:
 - name: yso.GetAllGadget
   type_str: 'func () return([]interface {}) '
   long_description: ""
-  description: ""
+  description: "获取所有可以生成的工具 Gadget"
   returns:
   - name: r0
     param_alias: ""
@@ -399,7 +399,7 @@ functions:
 - name: yso.GetAllRuntimeExecGadget
   type_str: 'func () return([]yso.RuntimeExecGadget) '
   long_description: ""
-  description: ""
+  description: "获取所有命令执行的 Gadget"
   returns:
   - name: r0
     param_alias: ""
@@ -409,7 +409,7 @@ functions:
 - name: yso.GetAllTemplatesGadget
   type_str: 'func () return([]yso.TemplatesGadget) '
   long_description: ""
-  description: ""
+  description: "获取所有模版执行的 Gadget"
   returns:
   - name: r0
     param_alias: ""
@@ -419,7 +419,7 @@ functions:
 - name: yso.GetBeanShell1JavaObject
   type_str: 'func (v1: string) return(*yso.JavaObject, error) '
   long_description: ""
-  description: ""
+  description: "生成 BeanShell1 Java反序列化对象"
   params:
   - name: v1
     param_alias: ""
@@ -447,7 +447,7 @@ functions:
   type_str: 'func (v1 ...func GenClassOptionFun(v1: *yso.ClassConfig) ) return(*yso.JavaObject,
     error) '
   long_description: ""
-  description: ""
+  description: "生成 Click1 恶意对象"
   params:
   - name: v1
     param_alias: ""
@@ -476,7 +476,7 @@ functions:
   type_str: 'func (v1 ...func GenClassOptionFun(v1: *yso.ClassConfig) ) return(*yso.JavaObject,
     error) '
   long_description: ""
-  description: ""
+  description: "CB183NoCC依赖的Java恶意对象"
   params:
   - name: v1
     param_alias: ""
@@ -505,7 +505,7 @@ functions:
   type_str: 'func (v1 ...func GenClassOptionFun(v1: *yso.ClassConfig) ) return(*yso.JavaObject,
     error) '
   long_description: ""
-  description: ""
+  description: "CB192NOCC的Java恶意对象"
   params:
   - name: v1
     param_alias: ""
@@ -534,7 +534,7 @@ functions:
   type_str: 'func (v1 ...func GenClassOptionFun(v1: *yso.ClassConfig) ) return(*yso.JavaObject,
     error) '
   long_description: ""
-  description: ""
+  description: "CB1"
   params:
   - name: v1
     param_alias: ""
