--- a/.github/workflows/essential-tests.yml
+++ b/.github/workflows/essential-tests.yml
@@ -63,3 +63,9 @@ jobs:
 
       - name: Test gRPC MUSTPASS
         run: go test -timeout 1m -run TestGRPCMUSTPASS ./common/yakgrpc -v
+
+      - name: Test gRPC MUSTPASS-PLUGIN-SQL
+        run: go test -timeout 1m -run TestGRPCMUSTPASS_SQL ./common/coreplugin -v
+
+      - name: Test gRPC MUSTPASS-PLUGIN-SSTI
+        run: go test -timeout 1m -run TestGRPCMUSTPASS_SSTI ./common/coreplugin -v
