--- a/.github/workflows/essential-tests.yml
+++ b/.github/workflows/essential-tests.yml
@@ -53,7 +53,7 @@ jobs:
         run: go test -timeout 1m ./common/yak/httptpl -v
 
       - name: Test Fuzz/Mutate
-        run: go test -timeout 1m ./common/mutate_tests -v
+        run: go test -timeout 1m ./common/mutate_tests ./common/fuzztag -v
 
       - name: Test MustPass - full yak scripts
         run: go test -timeout 1m ./common/yak/yaktest/mustpass -v
