--- a/.github/workflows/essential-tests.yml
+++ b/.github/workflows/essential-tests.yml
@@ -27,6 +27,10 @@ jobs:
           sudo apt-get update
           sudo apt-get install libpcap-dev=1.9.1-3
 
+      - name: Init Vendor
+        run: |
+          go mod vendor && go run common/yak/cmd/yak.go --help
+
       - name: Test Start
         run: go test -timeout 1m ./common/jsonextractor -v
 
