--- a/.github/workflows/release-vulinbox.yml
+++ b/.github/workflows/release-vulinbox.yml
@@ -1,4 +1,4 @@
-name: Release
+name: Release Vulinbox
 
 on:
   push:
@@ -159,6 +159,7 @@ jobs:
 
       - name: Upload Release Asset Linux VULINBOX
         uses: actions/upload-release-asset@v1
+        continue-on-error: true
         env:
           GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
         with:
@@ -169,6 +170,7 @@ jobs:
 
       - name: Upload Release Asset macOS
         uses: actions/upload-release-asset@v1
+        continue-on-error: true
         env:
           GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
         with:
@@ -179,6 +181,7 @@ jobs:
 
       - name: Upload Release Asset Windows
         uses: actions/upload-release-asset@v1
+        continue-on-error: true
         env:
           GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
         with:
