add sensitive words on element check && fix useless of fulltimeout

--- a/common/crawlerx/newcrawlerx/cmd/param.ini
+++ b/common/crawlerx/newcrawlerx/cmd/param.ini
@@ -8,5 +8,6 @@ proxyPassword=
 formFill=username:admin;password:password;
 fileUpload=default:/Users/chenyangbao/1.txt;
 blackList=upload;
+sensitiveWord=
 whiteList=
 vue=false
