bugfix for utils.AppendDefaultPort && add AppendDefaultPort test

--- a/.github/workflows/essential-tests.yml
+++ b/.github/workflows/essential-tests.yml
@@ -89,3 +89,5 @@ jobs:
 
       - name: Test Sca
         run: go test -timeout 1m ./common/sca/... -v
+      - name: Test Utils
+        run: go test -timeout 1m -run TestHostPort ./common/utils/ -v
