fix(utils): return ":0" if port is not specified in raw
fix(vulinbox_agent): update field

fix(vulinbox_agent): parse schema for enabling tls or not

fix connect vulinbox agent

--- a/.github/workflows/essential-tests.yml
+++ b/.github/workflows/essential-tests.yml
@@ -89,5 +89,6 @@ jobs:
 
       - name: Test Sca
         run: go test -timeout 1m ./common/sca/... -v
-      - name: Test Utils
-        run: go test -timeout 1m -run TestHostPort ./common/utils/ -v
+
+      - name: Test HostPort  AppendPort
+        run: go test -timeout 1m -run TestMUSTPASS ./common/utils -v
