improve yakdns fallback tcp / doh and udp, add testcase for ci, more test needed

--- a/.github/workflows/essential-tests.yml
+++ b/.github/workflows/essential-tests.yml
@@ -95,3 +95,6 @@ jobs:
 
       - name: Test Vulinbox agent client
         run: go test -timeout 1m ./common/vulinboxagentclient -v
+
+      - name: Test YakDNS(DoH / TCP / UDP)
+        run: go test -timeout 20s ./common/yakdns -v
