--- a/.github/workflows/essential-tests.yml
+++ b/.github/workflows/essential-tests.yml
@@ -87,6 +87,9 @@ jobs:
       - name: Test gRPC MUSTPASS-PLUGIN-CSRF
         run: go test -timeout 1m -run TestGRPCMUSTPASS_CSRF ./common/coreplugin -v
 
+      - name: Test gRPC MUSTPASS-PLUGIN-Fastjson
+        run: go test -timeout 1m -run TestGRPCMUSTPASS_Fastjson ./common/coreplugin -v
+
       - name: Test CVEQuery
         run: go test -timeout 1m -run TestQueryCVEWithFixName ./common/cve -v
 
