--- a/.github/workflows/essential-tests.yml
+++ b/.github/workflows/essential-tests.yml
@@ -106,4 +106,4 @@ jobs:
         run: go test -timeout 1m ./common/vulinboxagentclient -v
 
       - name: Test YakDNS(DoH / TCP / UDP)
-        run: go test -timeout 20s ./common/yakdns/mustpass -v
+        run: go test -timeout 20s ./common/netx/mustpass -v
