--- a/.github/workflows/essential-tests.yml
+++ b/.github/workflows/essential-tests.yml
@@ -93,6 +93,9 @@ jobs:
           - name: Test Ping
             run: go test -timeout 20s -run TestPingAutoConfig ./common/utils/pingutil -v
 
+          - name: crawlerx (chromium based crawler)
+            run: go test -v --timeout 5m ./common/crawlerx
+
     steps:
       - name: Check out code into the Go module directory
         uses: actions/checkout@v3
