--- a/.github/workflows/essential-tests.yml
+++ b/.github/workflows/essential-tests.yml
@@ -98,6 +98,12 @@ jobs:
           - name: crawlerx (chromium based crawler)
             run: go test -v --timeout 5m ./common/crawlerx
 
+          - name: Test pcapx
+            run: |
+              go test -timeout 20s -run TestSmoking_ICMP ./common/pcapx -v
+              go test -timeout 20s -run TestSmoking_TCP ./common/pcapx -v
+              go test -timeout 20s -run TestSmoking_UDP ./common/pcapx -v
+
     steps:
       - name: Check out code into the Go module directory
         uses: actions/checkout@v3
